--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>Interactive Website</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -15,12 +15,25 @@
             height: auto;
             border-radius: 8px;
         }
+        button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a simple webpage with an image and some text.</p>
-    <img src="your-image-url.jpg" alt="Description of your image">
-    <p>Feel free to add more content here!</p>
+    <h1>Welcome to My Interactive Website</h1>
+    <img id="myImage" src="your-image-url.jpg" alt="Description of your image">
+    <button onclick="changeImage()">Change Image</button>
+
+    <script>
+        // JavaScript function to change the image source
+        function changeImage() {
+            var imageElement = document.getElementById("myImage");
+            // Change the image source to a new URL
+            imageElement.src = "new-image-url.jpg"; // Replace with your new image URL
+        }
+    </script>
 </body>
 </html>
