--- a/index.html
+++ b/index.html
@@ -24,15 +24,23 @@
 </head>
 <body>
     <h1>Welcome to My Interactive Website</h1>
-    <img id="myImage" src="your-image-url.jpg" alt="Description of your image">
+    <img id="myImage" src="your-image-url-1.jpg" alt="Description of your image">
     <button onclick="changeImage()">Change Image</button>
 
     <script>
+        var imageIndex = 1; // Starting index
+        var totalImages = 3; // Total number of images
+
         // JavaScript function to change the image source
         function changeImage() {
             var imageElement = document.getElementById("myImage");
-            // Change the image source to a new URL
-            imageElement.src = "new-image-url.jpg"; // Replace with your new image URL
+            
+            // Change the image source to the next URL
+            imageIndex = (imageIndex % totalImages) + 1;
+            imageElement.src = "your-image-url-" + imageIndex + ".jpg";
+
+            // Optionally, you can add a description for each image
+            imageElement.alt = "Description of your image " + imageIndex;
         }
     </script>
 </body>
