--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
         img {
             max-width: 100%;
-            height: auto;
+            height: 200px;
             border-radius: 8px;
         }
         button {
