--- a/index.html
+++ b/index.html
@@ -3,51 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Interactive Website</title>
+    <title>Personal Blog</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
             margin: 20px;
             background: linear-gradient(to right, #7F7FD5, #86A8E7, #91EAE4);
-            /* 修改渐变的颜色值 */
-            color: #fff; /* 文字颜色为白色，以适应渐变背景 */
+            color: #fff;
         }
-        img {
+        img, video {
             max-width: 100%;
-            height: 200px;
             border-radius: 8px;
+            margin-bottom: 20px;
         }
         button {
             padding: 10px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #4CAF50; /* 设置按钮背景颜色 */
-            color: white; /* 设置按钮文字颜色 */
-            border: none; /* 移除按钮边框 */
-            border-radius: 4px; /* 圆角边框 */
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 4px;
+        }
+        #blogContent {
+            text-align: left;
         }
     </style>
 </head>
 <body>
-    <h1>Welcome to My Interactive Website</h1>
-    <img id="myImage" src="your-image-url-1.jpg" alt="Description of your image">
-    <button onclick="changeImage()">Change Image</button>
+    <h1>Welcome to My Personal Blog</h1>
 
+    <div id="blogContent">
+        <p>Click the button to load a Markdown file.</p>
+    </div>
+
+    <button onclick="loadMarkdown()">Load Markdown</button>
+
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script>
-        var imageIndex = 1; // Starting index
-        var totalImages = 2; // Total number of images
-
-        // JavaScript function to change the image source
-        function changeImage() {
-            var imageElement = document.getElementById("myImage");
-            
-            // Change the image source to the next URL
-            imageIndex = (imageIndex % totalImages) + 1;
-            imageElement.src = "your-image-url-" + imageIndex + ".jpg";
-
-            // Optionally, you can add a description for each image
-            imageElement.alt = "Description of your image " + imageIndex;
+        function loadMarkdown() {
+            var xhr = new XMLHttpRequest();
+            xhr.onreadystatechange = function() {
+                if (xhr.readyState === 4 && xhr.status === 200) {
+                    var markdownText = xhr.responseText;
+                    var htmlText = marked(markdownText);
+                    document.getElementById("blogContent").innerHTML = htmlText;
+                }
+            };
+            xhr.open("GET", "your-markdown-file.md", true);
+            xhr.send();
         }
     </script>
 </body>
