--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                     document.getElementById("blogContent").innerHTML = htmlText;
                 }
             };
-            xhr.open("GET", "your-markdown-file.md", true);
+
+            // Replace "your-github-username", "your-repo-name", and "your-file-path" accordingly
+            var githubRawUrl = "https://raw.githubusercontent.com/rqliCFD/rqliCFD/main/your-markdown-file.md";
+            xhr.open("GET", githubRawUrl, true);
             xhr.send();
         }
     </script>
