--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             };
 
             // Replace "your-github-username", "your-repo-name", and "your-file-path" accordingly
-            var githubRawUrl = "https://raw.githubusercontent.com/rqliCFD/rqliCFD/main/your-markdown-file.md";
+            var githubRawUrl = "https://raw.githubusercontent.com/rqliCFD/rqliCFD/main/rqliCFD.github.io/your-markdown-file.md";
             xhr.open("GET", githubRawUrl, true);
             xhr.send();
         }
