--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 }
             };
 
-            // Replace "your-github-username", "your-repo-name", and "your-file-path" accordingly
-            var githubRawUrl = "https://raw.githubusercontent.com/rqliCFD/rqliCFD.github.io/main/your-markdown-file.md";
-            xhr.open("GET", githubRawUrl, true);
+            // Replace "your-github-username" and "your-repo-name" accordingly
+            var githubPagesUrl = "https://rqliCFD.github.io/rqliCFD.github.io/your-file-path.md";
+            xhr.open("GET", githubPagesUrl, true);
             xhr.send();
         }
     </script>
