--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             };
 
             // Replace "your-github-username" and "your-repo-name" accordingly
-            var githubPagesUrl = "https://rqliCFD.github.io/rqliCFD.github.io/your-file-path.md";
+            var githubPagesUrl = "https://rqliCFD.github.io/rqliCFD.github.io";
             xhr.open("GET", githubPagesUrl, true);
             xhr.send();
         }
