--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <script>
         function loadContent() {
             // Replace "your-github-username" and "your-repo-name" accordingly
-            var githubPagesUrl = "https://rqlicfd.github.io/rqliCFD.github.io";
+            var githubPagesUrl = "https://rqliCFD.github.io/rqliCFD.github.io";
             
             // Load image
             var img = document.createElement("img");
