--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             
             // Load image
             var img = document.createElement("img");
-            img.src = githubPagesUrl + "/your-image-url-2.jpg"; // Replace with the actual path to your image
+            img.src = "./your-image-url-2.jpg";
             img.alt = "Description of your image";
             document.getElementById("blogContent").innerHTML = "";
             document.getElementById("blogContent").appendChild(img);
