--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
          function loadImage() {
             // 使用相对路径加载图片
             var img = document.createElement("img");
-            img.src = "./path-to-your-image.jpg"; // 相对路径
+            img.src = "./your-image-url-2.jpg"; // 相对路径
             img.alt = "Description of your image";
             document.getElementById("blogContent").innerHTML = "";
             document.getElementById("blogContent").appendChild(img);
