--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             };
 
             // 使用相对路径加载 Markdown 文件
-            xhr.open("GET", "./your-markdown-file.md", true); // 相对路径
+            xhr.open("GET", "./README.md", true); // 相对路径
             xhr.send();
         }
     </script>
